--- a/scripts/test_dbem_runs.Rmd
+++ b/scripts/test_dbem_runs.Rmd
@@ -115,6 +115,7 @@ abd_df %>%
   )
 
 ```
+
 ## Map examples
 
 ```{r}
@@ -205,3 +206,65 @@ ggsave(plot = mpa_map,
        width = 10,height = 8)
 
 ```
+
+
+# Second Test: multiple species
+
+
+We ran 200 species using the GFDL26 Pre Industrial with F1 and the MPA grid (c6gfdl26f1mpanow)
+
+```{r test_initial_runs}
+
+# Read species list
+exploited_species_list <- my_data("dbem_species")
+
+# Read runs
+# runs <- list.files("/Volumes/Enterprise/Data/toe_mpa/dbem_runs/RC6GFDLPIF1MPA",full.names = T)
+
+
+#MPA metadata
+grid_meta <- MyFunctions::my_path("D","mpa",name = "/grid_all_mpas_metadata.csv", read = T) %>% 
+  select(-1)%>% 
+  rename(index = seq)
+head(grid_meta)
+
+# Get MPA prop grid
+grid_mpa <- MyFunctions::my_path("D","mpa",name = "/grid_all_mpas.csv", read = T) %>%
+  select(-1) %>% 
+  rename(index = seq)
+head(grid_mpa)
+
+# DBEM coordinates
+coods_dbem <- MyFunctions::my_data("dbem_coords")
+
+# List of modeled species
+taxon_list <- list.files(MyFunctions::my_path("D","raw/","c6gfdl26f1mpanow"))
+
+
+```
+
+
+
+```{r}
+
+load_dbem("c6gfdl26f1mpanow",taxon_key = "600464Abd.RData")
+
+
+
+```
+
+
+
+```{r}
+
+data <- list.files(MyFunctions::my_path("D","raw/","600004"),full.names = T,pattern = "Abd")
+
+bind_rows(
+  lapply(data, read.table)
+  ) %>% 
+  pull(V2) %>% 
+  max(na.rm = T)
+  
+  
+```
+
